# aipproject2

./: .gitignore  CMakeLists.txt  README.md  main.cpp  matrix.cpp  matrix.hpp
tests/: test_matrix.cpp
